# DirSync

./: LICENSE  README.md  pyproject.toml
examles/: basic.py  custom_settings.py
src/dir_sync/: __init__.py  _dir_sync.py
tests/: test_args.py  test_syncer.py
